@@ -17,6 +17,7 @@ class State(Enum):
     STOPPED = "STOPPED"
     ERROR = "ERROR"
     ATTENTION = "ATTENTION"
+    PREPARED = "PREPARED"
 
 
 class JobState(Enum):
@@ -96,3 +97,5 @@ class Command(Enum):
     START_DOWNLOAD = "START_DOWNLOAD"
     SEND_DOWNLOAD_INFO = "SEND_DOWNLOAD_INFO"
     STOP_DOWNLOAD = "STOP_DOWNLOAD"
+
+    SET_PRINTER_PREPARED = "SET_PRINTER_PREPARED"
